--- a/.eslintrc
+++ b/.eslintrc
@@ -1,28 +1,23 @@
 {
+  "plugins": [
+    "mocha"
+  ],
+  "rules": {
+        "curly": [2, "multi-line"],
+        "eol-last": [2],
+        "indent": [2, 4],
+        "linebreak-style": [2, "unix"],
+        "max-len": [2, 120, 4],
+        "no-trailing-spaces": [2, { "skipBlankLines": true }],
+        "no-unused-vars": [2, {"args": "after-used", "varsIgnorePattern": "^_"}],
+        "quotes": [2, "single"],
+        "semi": [2, "always"],
+        "space-before-function-paren": [2, "always"],
+        "strict": [2, "never"],
+  },
   "env": {
+    "es6": true,
     "node": true
   },
-  "rules": {
-    "array-bracket-spacing": [2, "never"],
-    "block-scoped-var": 2,
-    "brace-style": [2, "1tbs", {"allowSingleLine": true}],
-    "comma-dangle": [2, "always-multiline"],
-    "computed-property-spacing": [2, "never"],
-    "curly": 2,
-    "eol-last": 2,
-    "eqeqeq": [2, "smart"],
-    "max-len": [1, 125],
-    "new-cap": 1,
-    "no-extend-native": 2,
-    "no-mixed-spaces-and-tabs": 2,
-    "no-trailing-spaces": 2,
-    "no-undef": 2,
-    "no-unused-vars": 1,
-    "no-use-before-define": [2, "nofunc"],
-    "object-curly-spacing": [2, "never"],
-    "quotes": [2, "single", "avoid-escape"],
-    "semi": [2, "always"],
-    "keyword-spacing": 2,
-    "space-unary-ops": 2
-  }
+  "extends": "eslint:recommended"
 }
