--- a/package.json
+++ b/package.json
@@ -1,51 +1,37 @@
 {
-  "name": "cors-anywhere",
-  "version": "0.4.4",
-  "description": "CORS Anywhere is a reverse proxy which adds CORS headers to the proxied request. Request URL is taken from the path",
-  "license": "MIT",
-  "author": "Rob Wu <rob@robwu.nl>",
+  "name": "crossorigin.me",
+  "version": "2.0.0",
+  "description": "A CORS proxy for everyone",
+  "main": "index.js",
+  "scripts": {
+    "test": "npm run lint && npm run unit",
+    "lint": "eslint . --ext .js",
+    "unit": "mocha tests/*",
+    "start": "node index.js"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Rob--W/cors-anywhere.git"
-  },
-  "bugs": {
-    "url": "https://github.com/Rob--W/cors-anywhere/issues/",
-    "email": "rob@robwu.nl"
+    "url": "git+https://github.com/technoboy10/crossorigin.me.git"
   },
   "keywords": [
-    "cors",
-    "cross-domain",
-    "http-proxy",
-    "proxy",
-    "heroku"
+    "cors"
   ],
-  "main": "./lib/cors-anywhere.js",
-  "files": [
-    "lib/",
-    "test/",
-    "Procfile",
-    "demo.html",
-    "server.js"
-  ],
-  "dependencies": {
-    "http-proxy": "1.11.1",
-    "proxy-from-env": "0.0.1"
+  "author": "Connor Hudson",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/technoboy10/crossorigin.me/issues"
   },
+  "homepage": "https://crossorigin.me",
   "devDependencies": {
-    "coveralls": "^2.11.6",
-    "eslint": "^2.2.0",
-    "istanbul": "^0.4.2",
-    "lolex": "^1.5.0",
-    "mocha": "^3.4.2",
-    "nock": "^8.2.1",
-    "supertest": "^2.0.1"
+    "eslint": "3.18.0",
+    "eslint-plugin-mocha": "4.11.0",
+    "mocha": "3.1.2",
+    "supertest": "2.0.1"
   },
-  "scripts": {
-    "lint": "eslint .",
-    "test": "mocha ./test/test*.js --reporter spec",
-    "test-coverage": "istanbul cover ./node_modules/.bin/_mocha -- test/test.js test/test-ratelimit.js --reporter spec"
-  },
-  "engines": {
-    "node": ">=0.10.0"
+  "dependencies": {
+    "request": "2.81.0",
+    "restify": "4.3.0",
+    "restify-router": "0.2.1",
+    "toobusy-js": "^0.5.1"
   }
 }
