--- a/app.json
+++ b/app.json
@@ -1,10 +1,7 @@
 {
-  "name": "crossorigin.me",
-  "description": "Long live CORS proxies!",
-  "keywords": [
-    "cors",
-    "proxy",
-    "server",
-    "heroku"
-  ]
+    "name": "Cors Proxy",
+    "description": "Sample Cors Proxy",
+    "repository": "https://github.com/ccoenraets/cors-proxy",
+    "logo": "https://node-js-sample.herokuapp.com/node.svg",
+    "keywords": ["cors", "nodejs", "proxy", "salesforce", "rest"]
 }
