--- a/package.json
+++ b/package.json
@@ -1,37 +1,11 @@
 {
-  "name": "crossorigin.me",
-  "version": "2.0.0",
-  "description": "A CORS proxy for everyone",
-  "main": "index.js",
-  "scripts": {
-    "test": "npm run lint && npm run unit",
-    "lint": "eslint . --ext .js",
-    "unit": "mocha tests/*",
-    "start": "node index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/technoboy10/crossorigin.me.git"
-  },
-  "keywords": [
-    "cors"
-  ],
-  "author": "Connor Hudson",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/technoboy10/crossorigin.me/issues"
-  },
-  "homepage": "https://crossorigin.me",
-  "devDependencies": {
-    "eslint": "3.18.0",
-    "eslint-plugin-mocha": "4.11.0",
-    "mocha": "3.1.2",
-    "supertest": "2.0.1"
-  },
+  "name": "CorsProxy",
+  "description": "Simple Cors Proxy",
+  "version": "0.0.1",
+  "private": true,
   "dependencies": {
-    "request": "2.81.0",
-    "restify": "4.3.0",
-    "restify-router": "0.2.1",
-    "toobusy-js": "^0.5.1"
+    "express": "~4.4.3",
+    "request": "~2.36.0",
+    "body-parser": "~1.5.2"
   }
 }
